Create basic molecules

--- a/app/main.scss
+++ b/app/main.scss
@@ -1,7 +1,13 @@
+// Utils, mixins, variables, etc.
+
+
 // Atoms
 @import 'components/atoms/style';
+
 // Molecules
+@import 'components/molecules/style';
 
 // Organisms
 
 // Templates
+
