Create basic home template and article organism

--- a/app/main.scss
+++ b/app/main.scss
@@ -8,6 +8,7 @@
 @import 'components/molecules/style';
 
 // Organisms
+@import 'components/organisms/style';
 
 // Templates
-
+@import 'components/templates/style';
