--- a/app/components/atoms/_style.scss
+++ b/app/components/atoms/_style.scss
@@ -1,6 +1,6 @@
 /* Atoms styles */
 
-@import 'Link/style';
+@import 'Anchor/style';
 @import 'Label/style';
 @import 'Button/style';
 @import 'Input/style';
